--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.even {
+    background-color: steelblue;
+    color: white
+}
+
+.odd {
+    background-color: tomato;
+    color: white
+}
